add more example for tests suites