@@ -1,8 +1,9 @@
 package netflix;
-import com.google.common.collect.ImmutableMap;
+
+import java.util.Map;
 
 public class MapUtils {
-    public static ImmutableMap<String, Integer> get() {
-        return ImmutableMap.of("coin", 3, "glass", 4, "pencil", 1);
+    public static Map<String, Integer> get() {
+        return Map.of("coin", 3, "glass", 4, "pencil", 1);
     }
 }
